[package]
name = "emissary"
version = "0.1.0"
edition = "2021"
authors = ["Piszmog"]

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
awc = "3.0.0"
clap = { version = "3", features = ["derive"] }
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
regex = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3" }
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
